updated the app name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "richard_vance_simspace_challenge_submission",
+  "name": "paws_and_reflect",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
